change bundle directory and round table corners

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html ng-app="index">
 	<head>
 		<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+		<script src="./js/index.bundle.js"></script>
 		<link rel="stylesheet" href="./css/index.css">
-		<script src="./build/index.bundle.js"></script>
 		
 		<title>Pro 2 Pro</title>
 		<h1>Pro 2 Pro</h1>
