--- a/index.html
+++ b/index.html
@@ -16,22 +16,8 @@
                 </select>
             </div>
             <div class="image-left">
+            	<img class="team-image" ng-src="{{teamImage1}}">
             	<img class="player-image" ng-src="{{playerImage1}}">
-            </div>
-            <div class="team-left">
-            	<div class="team-name">
-            		{{teamName1}}
-            	</div>
-				<table class="table team-table">
-					<tr ng-repeat="(key, value) in teamStats1">
-						<td class="statLabel">
-							{{key}}
-						</td>
-						<td class="statValue">
-							{{value}}
-						</td>
-					</tr>
-				</table>
             </div>
 			<div class="leftForm">
 				<div class="dropdown">
@@ -59,9 +45,25 @@
 						</td>
 					</tr>
 				</table>
+	            <div class="team-left">
+	            	<div class="team-name">
+	            		{{teamName1}}
+	            	</div>
+					<table class="table team-table">
+						<tr ng-repeat="(key, value) in teamStats1">
+							<td class="statLabel">
+								{{key}}
+							</td>
+							<td class="statValue">
+								{{value}}
+							</td>
+						</tr>
+					</table>
+	            </div>
 			</div>
 			<div class="image-right">
-            	<img class="player-image" ng-src="{{playerImage2}}">
+				<img class="team-image image-right2" ng-src="{{teamImage2}}">
+            	<img class="player-image image-right2" ng-src="{{playerImage2}}">
             </div>
 			<div class="rightForm">
 				<div class="rightDropdown">
@@ -89,21 +91,21 @@
 						</td>
 					</tr>
 				</table>
-			</div>
-			<div class="team-right">
-            	<div class="team-name team-name-right">
-            		{{teamName2}}
-            	</div>
-				<table class="table team-table">
-					<tr ng-repeat="(key, value) in teamStats2">
-						<td class="statLabel">
-							{{key}}
-						</td>
-						<td class="statValue">
-							{{value}}
-						</td>
-					</tr>
-				</table>
+				<div class="team-right">
+	            	<div class="team-name team-name-right">
+	            		{{teamName2}}
+	            	</div>
+					<table class="table team-table">
+						<tr ng-repeat="(key, value) in teamStats2">
+							<td class="statLabel">
+								{{key}}
+							</td>
+							<td class="statValue">
+								{{value}}
+							</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</body>
