fix app responsiveness with profile images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 </select>
             </div>
             <div class="image-left">
-            	<img class="team-image" ng-src="{{teamImage1}}">
-            	<img class="player-image" ng-src="{{playerImage1}}">
+            	<img class="team-image image-left2" ng-src="{{teamImage1}}">
+            	<img class="player-image image-left2" ng-src="{{playerImage1}}">
             </div>
 			<div class="leftForm">
 				<div class="dropdown">
@@ -63,7 +63,7 @@
 			</div>
 			<div class="image-right">
 				<img class="team-image image-right2" ng-src="{{teamImage2}}">
-            	<img class="player-image image-right2" ng-src="{{playerImage2}}">
+        		<img class="player-image image-right2" ng-src="{{playerImage2}}">
             </div>
 			<div class="rightForm">
 				<div class="rightDropdown">
